--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,12 @@
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
-
+        
+        {% if site.email %}
+        <p class="view">Email: <small>{{ site.email }}</small></p>
+        {% endif %}
+        
+        
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
