--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
         
         
         {% if site.email %}
-        <p nowrap><b>Email: </b></p>
+        <pre><b>Email: </b></pre>
         <p class="view"><a href="mailto:{{ site.email_link }}">{{ site.email }}</p>
         {% endif %}
         
