--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
         
         
         {% if site.email %}
-        <pre><b>Email: </b></pre>
+        <nobr><b>Email: </b></nobr>
         <p class="view"><a href="mailto:{{ site.email_link }}">{{ site.email }}</p>
         {% endif %}
         
