--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
         
         {% if site.email %}
         <nobr><b>Email: </b></nobr>
-        <p class="view"><a href="mailto:{{ site.email_link }}">{{ site.email }}</p>
+        <p class="view"><a href="mailto:{{ site.email_link }}">{{ site.email }}</a></p>
         {% endif %}
         
         
