--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,12 +25,12 @@
         
         
         {% if site.email %}
-        <nobr><b>Email: </b></nobr>
+        <p><b>Email: </b>
         <p class="view"><a href="mailto:{{ site.email_link }}">{{ site.email }}</a></p>
         {% endif %}
         
         {% if site.linkedin %}
-        <nobr><b>LinkedIn: </b></nobr>
+        <p><b>LinkedIn: </b>
         <p class="view"><a href="{{ site.linkedin }}">Yutong Qu</a></p>
         {% endif %}
         
