--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,15 +25,11 @@
         
         
         {% if site.email %}
-        <nobr><b>Email: </b>
-          <p class="view"><a href="mailto:{{ site.email_link }}">{{ site.email }}</a></p>
-        </nobr>
+        <nobr><b>Email: </b><p class="view"><a href="mailto:{{ site.email_link }}">{{ site.email }}</a></nobr>
         {% endif %}
         
         {% if site.linkedin %}
-        <nobr><p><b>LinkedIn: </b>
-          <p class="view"><a href="{{ site.linkedin }}">Yutong Qu</a></p>
-        </nobr>
+        <nobr><b>LinkedIn: </b><p class="view"><a href="{{ site.linkedin }}">Yutong Qu</a></nobr>
         {% endif %}
         
         
