--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
         
         {% if site.dblp_logo %}
-          <img src="{{site.dblp_logo | site.dblp.relative_url}}" alt="DBLP Logo" width="50" height="50" />
+          <img src="{{site.dblp_logo | site.dblp_link}}" alt="DBLP Logo" width="50" height="50" />
         {% endif %}
 
         
