--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,15 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
         
         {% if site.dblp_logo %}
-          <a href="{{ site.dblp_link }}"><img src="{{site.dblp_logo | site.dblp_link}}" alt="DBLP Logo" width="40" height="40" /></a>
+        <div class="" style="display: inline-block;">
+          <a href="{{ site.dblp_link }}"><img src="{{site.dblp_logo | site.dblp_link}}" alt="DBLP Logo" width="45" height="45" /></a>
+        </div>
+        {% endif %}
+        
+        {% if site.resgate_logo %}
+        <div class="" style="display: inline-block;">
+          <a href="{{ site.resgate_link }}"><img src="{{site.resgate_logo | site.resgate_link}}" alt="RG Logo" width="45" height="45" /></a>
+        </div>
         {% endif %}
 
         
