--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,12 @@
           <a href="{{ site.resgate_link }}"><img src="{{site.resgate_logo | site.resgate_link}}" alt="RG Logo" width="40" height="40" /></a>
         </div>
         {% endif %}
+        
+        {% if site.orcid_logo %}
+        <div class="" style="display: inline-block;">
+          <a href="{{ site.orcid_link }}"><img src="{{site.orcid_logo | site.orcid_link}}" alt="ORCID Logo" width="40" height="40" /></a>
+        </div>
+        {% endif %}
 
         
         {% if site.email %}
