--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,11 +29,11 @@
         </div>
         {% endif %}
         
-<!--         {% if site.gscholar_logo %}
+        {% if site.gscholar_logo %}
         <div class="" style="display: inline-block;">
           <a href="{{ site.gscholar_link }}"><img src="{{site.gscholar_logo | site.gscholar_link}}" alt="GS Logo" width="40" height="40" /></a>
         </div>
-        {% endif %} -->
+        {% endif %}
         
         {% if site.resgate_logo %}
         <div class="" style="display: inline-block;">
